--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.1",
     "axios": "^1.13.2",
+    "axios-mock-adapter": "^2.1.0",
     "jsdom": "^27.4.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
